--- a/Training_CIFAR10_Assignment_1.ipynb
+++ b/Training_CIFAR10_Assignment_1.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Training_CIFAR10_Assignment_1",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyP1zMsoMXlxfaJNDOonD4gt",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kajol16/Test/blob/main/Training_CIFAR10_Assignment_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -588,6 +600,26 @@
         "inputs, labels = data[0].to(device), data[1].to(device)"
       ],
       "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-10ygzZHQep8"
+      },
+      "source": [
+        "## Experiments"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dV9VrL6hQgEG"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
